<resources>
    <string name="app_name">Super Media App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="display_name">Display Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dari_galeri">Galeri</string>
    <string name="dari_kamera">Kamera</string>
    <string name="batal">Batal</string>
</resources>