<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="100dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Silahkan pilih pengambilan gambar"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/btn_dari_galeri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/dari_galeri" />

            <TextView
                android:id="@+id/btn_dari_kamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:padding="10dp"
                android:text="@string/dari_kamera"
                android:layout_margin="1dp"/>

            <TextView
                android:id="@+id/btn_batal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:padding="10dp"
                android:text="@string/batal" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.appcompat.widget.LinearLayoutCompat>